--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,23 @@
                     <mainClass>main.Main</mainClass>
                 </configuration>
             </plugin>
+
+            <plugin> 
+                <!-- Build an executable jar --> 
+                <groupId>org.apache.maven.plugins</groupId> 
+                <artifactId>maven-jar-plugin</artifactId> 
+                <version>2.4</version> 
+                <configuration> 
+                    <archive> 
+                        <manifest> 
+                            <addClasspath>true</addClasspath> 
+                            <classpathPrefix>lib/</classpathPrefix> 
+                            <mainClass>main.Main</mainClass> 
+                        </manifest> 
+                    </archive> 
+                </configuration> 
+            </plugin>
+
         </plugins>
     </build>
 
